--- a/index.html
+++ b/index.html
@@ -10,15 +10,99 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
+
+    <!-- Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap"
+    />
+
+    <!-- Own custom CSS-->
     <link rel="stylesheet" type="text/css" href="/index.css" />
+    <script src="index.js" defer></script>
 
     <title>Frontend Mentor | Space tourism website</title>
   </head>
-  <body>
-    <nav class="nav-bar">00 Home 01 Destination 02 Crew 03 Technology</nav>
-    So, you want to travel to Space Let’s face it; if you want to go to space,
-    you might as well genuinely go to outer space and not hover kind of on the
-    edge of it. Well sit back, and relax because we’ll give you a truly out of
-    this world experience! Explore
+  <body class="home">
+    <a class="skip-to-content" href="#main">Skip to content</a>
+    <header class="header-primary flex">
+      <div>
+        <img
+          src="assets/shared/logo.svg"
+          alt="space-tourism-logo"
+          class="logo"
+        />
+      </div>
+      <button class="mobile-nav-toggle" aria-controls="primary-navigation">
+        <span class="sr-only" aria-expanded="false">Menu</span>
+      </button>
+      <nav>
+        <ul
+          id="primary-navigation"
+          data-visible="false"
+          class="primary-navigation underline-indicators flex"
+        >
+          <li>
+            <a
+              href="index.html"
+              class="uppercase letter-spacing-2 text-white ff-sans-cond"
+              href=""
+              ><span aria-hidden="true">00</span>Home</a
+            >
+          </li>
+          <li>
+            <a
+              href="destination.html"
+              class="uppercase letter-spacing-2 text-white ff-sans-cond"
+              href=""
+              ><span aria-hidden="true">01</span>Destination</a
+            >
+          </li>
+          <li>
+            <a
+              href="crew.html"
+              class="uppercase letter-spacing-2 text-white ff-sans-cond"
+              href=""
+              ><span aria-hidden="true">02</span>Crew</a
+            >
+          </li>
+          <li>
+            <a
+              href="technology.html"
+              class="uppercase letter-spacing-2 text-white ff-sans-cond"
+              href=""
+              ><span aria-hidden="true">03</span>Technology</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main id="main" class="grid-container grid-container--home">
+      <div>
+        <h1 class="text-accent fs-500 ff-sans uppercase">
+          So, you want to travel to
+          <span class="d-block fs-900 ff-serif text-white letter-spacing-2"
+            >Space</span
+          >
+        </h1>
+        <p>
+          Let’s face it; if you want to go to space, you might as well genuinely
+          go to outer space and not hover kind of on the edge of it. Well sit
+          back, and relax because we’ll give you a truly out of this world
+          experience!
+        </p>
+      </div>
+      <div>
+        <a
+          href="#"
+          class="large-button fs-600 ff-serif text-dark uppercase bg-white"
+        >
+          Explore</a
+        >
+      </div>
+    </main>
   </body>
 </html>
