--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
     <!-- Own custom CSS-->
     <link rel="stylesheet" type="text/css" href="/index.css" />
-    <script src="index.js" defer></script>
+    <script src="navigation.js" defer></script>
+    <script src="tabs.js" defer></script>
 
     <title>Frontend Mentor | Space tourism website</title>
   </head>
@@ -44,7 +45,7 @@
           data-visible="false"
           class="primary-navigation underline-indicators flex"
         >
-          <li>
+          <li class="active">
             <a
               href="index.html"
               class="uppercase letter-spacing-2 text-white ff-sans-cond"
@@ -64,7 +65,7 @@
             <a
               href="crew.html"
               class="uppercase letter-spacing-2 text-white ff-sans-cond"
-              href=""
+              href="crew.html"
               ><span aria-hidden="true">02</span>Crew</a
             >
           </li>
@@ -72,7 +73,7 @@
             <a
               href="technology.html"
               class="uppercase letter-spacing-2 text-white ff-sans-cond"
-              href=""
+              href="technology.html"
               ><span aria-hidden="true">03</span>Technology</a
             >
           </li>
@@ -97,7 +98,7 @@
       </div>
       <div>
         <a
-          href="#"
+          href="destination.html"
           class="large-button fs-600 ff-serif text-dark uppercase bg-white"
         >
           Explore</a
